# HellForge

./: .gitignore  BuildTool.vcxproj  BuildTool.vcxproj.filters  Cargo.toml  HellForge.sln  LoaderBuilderGUI.vcxproj  LoaderBuilderGUI.vcxproj.filters  README.md  build.c  gui.c  gui.h  gui_build.c  gui_gen.c  hellforge.py
hellforge-build/: Cargo.toml
hellforge-build/src/: codegen.rs  compiler.rs  config.rs  crypto.rs  main.rs
hellforge-gui/: Cargo.toml
hellforge-gui/.claude/commands/: hf-add-payload.md  hf-build.md  hf-check.md
hellforge-gui/src/: app.rs  injection.rs  logger.rs  main.rs  msf.rs  runner.rs  types.rs
hellforge-loader/: Cargo.toml  build.rs
hellforge-loader/src/: anti_analysis.rs  early_bird.rs  etw.rs  hashing.rs  hellsgate.rs  inject.rs  main.rs  peb.rs  sleep_obf.rs  syscall.rs  syscheck.rs  types.rs  unhook.rs
src/: AV.vcxproj  AV.vcxproj.filters  AntiAnalysis.c  ApiHashing.c  Common.h  Debug.h  EarlyBird.c  Etw.c  HellAsm.s  HellsGate.c  Inject.c  SleepObf.c  Structs.h  Unhook.c  WinApi.c  loader_config.h  loader_payload.c  main.c  typedef.h
tools/: setup_srdi.sh
