[package]
name    = "hellforge-loader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loader"
path = "src/main.rs"

[features]
etw_patch       = []
unhook_disk     = []
early_bird      = []
anti_analysis   = []
sleep_obf       = []

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Registry",
] }
